adding font awesome icons

--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
 
     <!-- build:css styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/font-awesome.min.css">
     <!-- endbuild -->
     
     <!-- build:js scripts/vendor/modernizr.js -->
@@ -37,6 +38,7 @@
                 <p>The tragic ending of the last Tsar and his Family.</p>
               </div>
             </div>
+            <!--Navigation-->
             <nav>
               <ul>
                 <li><a href="#rev">Revolutions</a></li>
