Final copy for project added

--- a/app/index.html
+++ b/app/index.html
@@ -14,9 +14,12 @@
     <!-- endbower -->
     <!-- endbuild -->
 
+        <!-- build:css styles/font-awesome.min.css -->
+    <link rel="stylesheet" type="text/css" href="styles/font-awesome.min.css">
+    <!-- endbuild -->
+
     <!-- build:css styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/font-awesome.min.css">
     <!-- endbuild -->
     
     <!-- build:js scripts/vendor/modernizr.js -->
@@ -24,31 +27,28 @@
     <!-- endbuild -->
   </head>
   <body>
-    <!-- Wrapper -->
+   <!-- Wrapper -->
       <div id="wrapper">
 
         <!-- Header -->
           <header id="header">
-            <div class="logo">
-              <span class="icon fa-diamond"></span>
+            <div class="logo" id="logo">
+            <span ><img src="images/logo.png" width="75" /></span>
             </div>
             <div class="content">
               <div class="inner">
-                <h1>House of Romanov</h1>
-                <p>The tragic ending of the last Tsar and his Family.</p>
+                <h1>HOUSE OF ROMANOV</h1>
+                <p>THE TRAGIC ENDING OF THE LAST TSAR AND HIS FAMILY.</p>
               </div>
             </div>
-            <!--Navigation-->
+          <!-- Navigation -->
             <nav>
               <ul>
-                <li><a href="#rev">Revolutions</a></li>
-                <li><a href="#throne">Work</a></li>
-                <li><a href="#war">About</a></li>
-                <li><a href="#killed">About</a></li>
-                <li><a href="#missing">About</a></li>
-                <li><a href="#secrets">About</a></li>
+                <li><a href="#revolution">Revolution</a></li>
+                <li><a href="#abdicating">Abdicating</a></li>
+                <li><a href="#civil">War</a></li>
+                <li><a href="#hope">Hope</a></li>
                 <li><a href="#resources">Resources</a></li>
-
               </ul>
             </nav>
           </header>
@@ -56,72 +56,94 @@
         <!-- Main -->
           <div id="main">
 
-            <!-- Intro -->
-              <article id="rev">
-                <h2 class="major">THE RUSSIAN REVOLUTIONS</h2>
-                <span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-                <p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+            <!-- Revolution Begins -->
+              <article id="revolution">
+                <h2 class="major">A Russian Revolution</h2>
+                <span class="image main"><img src="images/revolution.jpg" alt="" /></span>
+                <p>In 1917 the relationship between the people and the Russian Tsar started to crumble. After World War I and some poor descisions made by the Russian leaders the people felt like they were treated badly with the lack of food, appreciation, and loss of men. During this time the Royal family had many stuggle, but began to bargain and try to find a way to calm the crowds.</p>
+
+                <h3 class="major">Resource</h3>
+                  <ul class="actions">
+                    <li><a href="https://www.britannica.com/event/Russian-Revolution-of-1917" class="button">Learn More</a></li>
+                  </ul>
               </article>
 
-            <!-- Work -->
-              <article id="throne">
-                <h2 class="major">ABDICATING THE THRONE</h2>
-                <span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-                <p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-                <p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+            <!-- Abdicating the Throne-->
+              <article id="abdicating">
+                <h2 class="major">Abdicating the Throne</h2>
+                <span class="image main"><img src="images/pic04.jpg" alt="" /></span>
+                <p>With the Revoltuion going on with full strength Nicholas II began to get nervous. In March 1917 after two more wars since the begining of the revolution he stepped down from the throne by force from the socialist party. Since abdicatin the throne his family was forced to move to the Czarskoye Selo Palace for safe keeping.</p>
+
+                <h3 class="major">Resource</h3>
+                  <ul class="actions">
+                    <li><a href="http://www.history.com/this-day-in-history/czar-nicholas-ii-abdicates" class="button">Learn More</a></li>
+                  </ul>
+
               </article>
 
-            <!-- About -->
-              <article id="war">
-                <h2 class="major">RUSSIAN CIVIL WAR</h2>
-                <span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-                <p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+            <!-- The Civil War -->
+              <article id="civil">
+                <h2 class="major">A Civil War</h2>
+                <span class="image main"><img src="images/pic06.jpg" alt="" /></span>
+                <p>As the socialist became more powerful they also became more paranoid. In 1918 they moved the royal family again to Yekaterinburg. With the civil war making a turn to end and anti-Bolshevik forces rising they began to get nervous the the Tsar and his family would be freed and given power again.On July 17th, 1918 the socialist killed all of the royal family in one of the basement rooms as well as any servants that were brought with them.</p>
+
+                <h3 class="major">Resource</h3>
+                  <ul class="actions">
+                    <li><a href="https://www.britannica.com/event/Russian-Civil-War" class="button">Learn More</a></li>
+                  </ul>
+
               </article>
 
-            <!-- About -->
-              <article id="killed">
-                <h2 class="major">ROMANOVS ARE KILLED</h2>
-                <span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-                <p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+            <!-- Stoy of Hope -->
+
+              <article id="hope">
+                <h2 class="major">A Story of Hope</h2>
+                <span class="image main"><img src="images/pic09.jpg" alt="" /></span>
+                <p>On February 6th, 1928 In New York City a girl showed up who claimed to be Anastasia Tschaikovsky. She claimed that she came to America for doctors care. After a press conference a man named Gleb Botkin claimed that he played with the duchess as a child and knew that this was true, that she was alive.</p>
+                <p>As time went on she was eventually found out to be Anna Anderson. She was found in Europe as a suicidal patient with no memory. This began a long legal battle for finding out if Anna Anderson was actually Anastasia.</p>
+
+                <h3 class="major">Resource</h3>
+                  <ul class="actions">
+                    <li><a href="http://www.history.com/this-day-in-history/anastasia-arrives-in-the-united-states" class="button">Learn More</a></li>
+                  </ul>
+
               </article>
 
-                          <!-- About -->
-              <article id="missing">
-                <h2 class="major">MISSING BODIES</h2>
-                <span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-                <p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
-              </article>
 
-                          <!-- About -->
-              <article id="secrets">
-                <h2 class="major">SECRETS AND LIES</h2>
-                <span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-                <p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
-              </article>
+            <!-- Resources -->
 
-          <!-- Resources -->
               <article id="resources">
-                <h2 class="major">Resources</h2>
-                <span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-                <p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+                <h2 class="major">Timeline</h2>
+                <ul>
+                <li>The Russian Revolution Begins - January 22, 1905</li>
+                <li>End of the First Revolution - October 30, 1905</li>
+                <li>Russia enters WWI - August 14, 1914</li>
+                <li>Second Russian Revolution Begins - February 23, 1917</li>
+                <li>Nicholas II Forced to Abdicate the Throne - March 2, 1917</li>
+                <li>Russian Civil War Begins - November 7, 1917</li>
+                <li>Bolsheviks Take Control - November 8, 1917</li>
+                <li>The Romanovs are Killed - July 17, 1918</li>
+                <li>Russian Civil War Ends - March 21, 1921</li>
+                <li>Anna Anderson Shows up in New Work - February 6, 1928</li>
+                </ul>
+
               </article>
+
 
           </div>
-  
 
         <!-- Footer -->
           <footer id="footer">
-                <h4>Icons</h4>
                   <ul class="icons">
-                    <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-                    <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-                    <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-                    <li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
+                    <li><a href="https://www.facebook.com/kaytlin.cox.7" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+                    <li><a href="https://www.instagram.com/kaytlin.cox/?hl=en" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+                    <li><a href="https://github.com/KAYTLINC" class="icon fa-github"><span class="label">Github</span></a></li>
                   </ul>
+            <p class="copyright">&copy; 2017 Kaytlin Cox - Class Project</p>
           </footer>
 
       </div>
+
 
     <!-- BG -->
       <div id="bg"></div>
@@ -164,5 +186,6 @@
       <script src="scripts/util.js"></script>
       <script src="scripts/main.js"></script>
     <!-- endbuild -->
+
   </body>
 </html>
