--- a/app/index.html
+++ b/app/index.html
@@ -163,6 +163,7 @@
     <script src="/bower_components/jquery/dist/jquery.js"></script>
     <script src="/bower_components/tether/dist/js/tether.js"></script>
     <script src="/bower_components/modernizr/modernizr.js"></script>
+    <script src="/bower_components/skel/src/skel.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     
