added animation to the learn more buttons

--- a/app/index.html
+++ b/app/index.html
@@ -48,7 +48,7 @@
                 <li><a href="#abdicating">Abdicating</a></li>
                 <li><a href="#civil">War</a></li>
                 <li><a href="#hope">Hope</a></li>
-                <li><a href="#resources">Resources</a></li>
+                <li><a href="#resources">Timeline</a></li>
               </ul>
             </nav>
           </header>
@@ -64,7 +64,7 @@
 
                 <h3 class="major">Resource</h3>
                   <ul class="actions">
-                    <li><a href="https://www.britannica.com/event/Russian-Revolution-of-1917" class="button">Learn More</a></li>
+                    <li><div class="wiggle"><a href="https://www.britannica.com/event/Russian-Revolution-of-1917" class="button">Learn More</a></div></li>
                   </ul>
               </article>
 
@@ -76,7 +76,7 @@
 
                 <h3 class="major">Resource</h3>
                   <ul class="actions">
-                    <li><a href="http://www.history.com/this-day-in-history/czar-nicholas-ii-abdicates" class="button">Learn More</a></li>
+                    <li><div class="wiggle"><a href="http://www.history.com/this-day-in-history/czar-nicholas-ii-abdicates" class="button">Learn More</a></div></li>
                   </ul>
 
               </article>
@@ -89,7 +89,7 @@
 
                 <h3 class="major">Resource</h3>
                   <ul class="actions">
-                    <li><a href="https://www.britannica.com/event/Russian-Civil-War" class="button">Learn More</a></li>
+                    <li><div class="wiggle"><a href="https://www.britannica.com/event/Russian-Civil-War" class="button">Learn More</a></div></li>
                   </ul>
 
               </article>
@@ -104,7 +104,7 @@
 
                 <h3 class="major">Resource</h3>
                   <ul class="actions">
-                    <li><a href="http://www.history.com/this-day-in-history/anastasia-arrives-in-the-united-states" class="button">Learn More</a></li>
+                    <li><div class="wiggle"><a href="http://www.history.com/this-day-in-history/anastasia-arrives-in-the-united-states" class="button">Learn More</a></div></li>
                   </ul>
 
               </article>
